Fix rendering of the docs on mobile screens

--- a/src/assets/less/content.less
+++ b/src/assets/less/content.less
@@ -1,10 +1,6 @@
 /* ----------------------------------------------------------------------------
  * Content styling
  */
-#docs {
-  height: 100%;
-  width: 100%;
-}
 .content {
   position: relative;
 }
@@ -438,9 +434,21 @@ h1 small.beta {
   @media(max-width: @medium-size) {
     left: 0;
   }
-
 }
 
+.mobile-arrows {
+  display: none;
+  .clearfix();
+  @media(max-width: @xlarge-size) {
+    display: block;
+  }
+}
+.desktop-arrows {
+  display: block;
+  @media(max-width: @xlarge-size) {
+    display: none;
+  }
+}
 
 .arrow {
   position: absolute;
@@ -455,16 +463,16 @@ h1 small.beta {
   cursor: pointer;
   text-align: center;
   @media(max-width: @xlarge-size) {
-   position: static;
    top: auto;
-   display: inline-block;
    float: left;
+   display: block;
    max-width: 50%;
    width: 50%;
-   height: 180px;
-   margin-top: 50px;
+   height: 50px;
+   background: rgba(255,255,255,0.9);
   }
-  &:hover {
+  &:hover, &:active {
+    color: @spark-blue;
     i {
       color: @spark-blue;
     }
@@ -486,8 +494,9 @@ h1 small.beta {
     font-style: normal;
     font-size: 2em;
     .transition(color 0.2s);
-    &:hover {
-      color: @spark-blue;
+    @media(max-width: @xlarge-size) {
+      font-size: 1.5em;
+      margin-top: 0;
     }
   }
 }
