--- a/src/assets/less/popup.less
+++ b/src/assets/less/popup.less
@@ -21,6 +21,7 @@
 .popupLink {
   border-bottom: 1px solid #00adef;
   cursor: pointer;
+  position: relative;
 }
 
 .two-columns .content .img {
